--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
 <head lang="en">
   <meta charset="UTF-8">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" href="css/reveal.css">
+  <link rel="stylesheet" href="css/theme/solarized.css" id="theme">
+
   <title>Function Composition using Scala</title>
 </head>
 <body>
+  <div class="reveal">
+    <div class="slides">
+      
+    </div>
+  </div>
 
+  <script type="text/javascript" src="./js/reveal.js"></script>
 </body>
 </html>
