Completed About Me section.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
 <body>
   <div class="reveal">
     <div class="slides">
-      
+      <section>
+        <h1>Function Composition</h1>
+        <h2>using Scala</h2>
+        <p>Desert Code Camp October 2014</p>
+      </section>
+
+      <section id="about-me">
+        <h1>About Me</h1>
+        <h3>Jose Trigueros</h3>
+        <p>Arizona State University Graduate</p>
+        <p>Software Developer at Sandia National Laboratories</p>
+        <p>Been using Scala for 2 years</p>
+        <a href="http://twitter.com/jvtrigueros">@jvtrigueros</a>
+      </section>
     </div>
   </div>
 
