Starting out the function composition section.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h3>Jose Trigueros</h3>
         <p>Arizona State University Graduate</p>
         <p>Software Developer at Sandia National Laboratories</p>
-        <p>Been using Scala for 2 years</p>
+        <p>Scala user for 2 years</p>
         <a href="http://twitter.com/jvtrigueros">@jvtrigueros</a>
       </section>
 
@@ -121,6 +121,11 @@ nums map incrementor
         <h2>Read Evaluate Print Loop</h2>
         <p>Creates an interactive shell that may aid in development.</p>
       </section>
+
+      <section>
+        <h1>Function Composition</h1>
+        <h2>\[ (f\circ g)(x) \]</h2>
+      </section>
     </div>
   </div>
 
@@ -144,9 +149,10 @@ nums map incrementor
         { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
 //        { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 //        { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-        { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+        { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
 //        { src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
 //        { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+        { src: 'plugin/math/math.js', async: true }
       ]
     });
   </script>
